--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2363,6 +2363,16 @@ span.lessonsCourse:after {
 }
 
 /* line 1814, ../sass/style.scss */
+#lessonCollectionSection form select:before {
+  width: 150px;
+}
+
+/* line 1817, ../sass/style.scss */
+#lessonCollectionSection form select:after {
+  width: 100%;
+}
+
+/* line 1820, ../sass/style.scss */
 span.lessonsCourse {
   background: url("../images/dd_arrow.png") no-repeat scroll right 10px white !important;
   border: 1px solid #cccccc;
@@ -2379,17 +2389,17 @@ span.lessonsCourse {
   z-index: 1;
 }
 
-/* line 1830, ../sass/style.scss */
+/* line 1836, ../sass/style.scss */
 .transcription .lessonsCourse, #views-exposed-form-free-lessons-page .lessonsCourse {
   display: block !important;
 }
 
-/* line 1833, ../sass/style.scss */
+/* line 1839, ../sass/style.scss */
 #views-exposed-form-free-lessons-page .views-exposed-widget {
   float: left !important;
 }
 
-/* line 1836, ../sass/style.scss */
+/* line 1842, ../sass/style.scss */
 .transcription span.lessonsCourse {
   background: url("http://cdn1.kabbalah.com/university/icons/dropdown_arrow_blue.png") no-repeat scroll 316px 10px !important;
   border: 0;
@@ -2408,7 +2418,7 @@ span.lessonsCourse {
   text-transform: uppercase;
 }
 
-/* line 1853, ../sass/style.scss */
+/* line 1859, ../sass/style.scss */
 .transcription span.lessonsCourse:before {
   content: "View Live Transcript";
   color: white;
@@ -2416,12 +2426,12 @@ span.lessonsCourse {
   text-transform: capitalize;
 }
 
-/* line 1859, ../sass/style.scss */
+/* line 1865, ../sass/style.scss */
 .transcription .form-type-select {
   margin-bottom: 9px !important;
 }
 
-/* line 1862, ../sass/style.scss */
+/* line 1868, ../sass/style.scss */
 #transcriptWrapper label {
   float: left;
   font-size: 16px;
@@ -2431,24 +2441,24 @@ span.lessonsCourse {
   padding-left: 10px;
 }
 
-/* line 1870, ../sass/style.scss */
+/* line 1876, ../sass/style.scss */
 .transcription select {
   float: none !important;
 }
 
-/* line 1873, ../sass/style.scss */
+/* line 1879, ../sass/style.scss */
 .trans-lang-select.form-select {
   width: 320px;
 }
 
-/* line 1876, ../sass/style.scss */
+/* line 1882, ../sass/style.scss */
 #lessonCollectionSection form select {
   cursor: pointer;
   height: 30px;
   padding-right: 40px;
 }
 
-/* line 1881, ../sass/style.scss */
+/* line 1887, ../sass/style.scss */
 #preReqsTitle {
   color: white;
   font-weight: normal;
@@ -2456,7 +2466,7 @@ span.lessonsCourse {
   line-height: 20px;
 }
 
-/* line 1887, ../sass/style.scss */
+/* line 1893, ../sass/style.scss */
 #preReqs a {
   color: #4dcff5;
   font-weight: normal;
@@ -2465,50 +2475,50 @@ span.lessonsCourse {
   text-transform: uppercase;
 }
 
-/* line 1894, ../sass/style.scss */
+/* line 1900, ../sass/style.scss */
 .lessonTitle {
   float: left;
   width: 450px;
 }
 
-/* line 1898, ../sass/style.scss */
+/* line 1904, ../sass/style.scss */
 .lessonRecordedDate {
   float: left;
   width: 100px;
 }
 
-/* line 1902, ../sass/style.scss */
+/* line 1908, ../sass/style.scss */
 .lessonWatchLink {
   float: left;
   width: 45px;
 }
 
-/* line 1906, ../sass/style.scss */
+/* line 1912, ../sass/style.scss */
 #contentAuthorInfo #eSocial {
   margin-top: 135px !important;
   margin-bottom: 17px !important;
   width: 440px !important;
 }
 
-/* line 1911, ../sass/style.scss */
+/* line 1917, ../sass/style.scss */
 #wrapperVideoSection #eSocial {
   margin: auto;
   width: 940px;
 }
 
-/* line 1915, ../sass/style.scss */
+/* line 1921, ../sass/style.scss */
 .videocontent #eSocial {
   margin: auto;
   width: 640px !important;
 }
 
-/* line 1919, ../sass/style.scss */
+/* line 1925, ../sass/style.scss */
 .sharethis {
   border-top: 1px solid #7c7575;
   padding-top: 10px;
 }
 
-/* line 1923, ../sass/style.scss */
+/* line 1929, ../sass/style.scss */
 #courseDescription #eSocial .sharethis {
   border-top: none !important;
   padding-top: 0 !important;
@@ -2517,7 +2527,7 @@ span.lessonsCourse {
   margin-right: -17px;
 }
 
-/* line 1930, ../sass/style.scss */
+/* line 1936, ../sass/style.scss */
 #language {
   float: left;
   color: #433b3a;
@@ -2526,7 +2536,7 @@ span.lessonsCourse {
   line-height: 24px;
 }
 
-/* line 1937, ../sass/style.scss */
+/* line 1943, ../sass/style.scss */
 #courseDescription #eSocial {
   margin: auto;
   width: 700px;
@@ -2535,119 +2545,119 @@ span.lessonsCourse {
   height: 37px;
 }
 
-/* line 1944, ../sass/style.scss */
+/* line 1950, ../sass/style.scss */
 #optionVideo .sharethis {
   padding-top: 0px;
 }
 
-/* line 1947, ../sass/style.scss */
+/* line 1953, ../sass/style.scss */
 #topicCourseTitle, #topicCourse {
   display: inline !important;
 }
 
-/* line 1950, ../sass/style.scss */
+/* line 1956, ../sass/style.scss */
 #topicCourse {
   text-transform: uppercase;
 }
 
-/* line 1953, ../sass/style.scss */
+/* line 1959, ../sass/style.scss */
 .courseDescriptionWrapper {
   margin: 23px auto;
   width: 700px;
 }
 
-/* line 1957, ../sass/style.scss */
+/* line 1963, ../sass/style.scss */
 .courseDescriptionWrapper p {
   text-align: justify;
 }
 
-/* line 1960, ../sass/style.scss */
+/* line 1966, ../sass/style.scss */
 .courseDescriptionWrapper ul {
   color: #433a3a;
 }
 
-/* line 1963, ../sass/style.scss */
+/* line 1969, ../sass/style.scss */
 .stButton {
   margin-left: 0 !important;
 }
 
-/* line 1966, ../sass/style.scss */
+/* line 1972, ../sass/style.scss */
 .st_facebook_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/facebook_icon_white.png) no-repeat !important;
   width: 26px !important;
 }
 
-/* line 1970, ../sass/style.scss */
+/* line 1976, ../sass/style.scss */
 .st_twitter_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/twitter_icon_white.png) no-repeat !important;
   width: 39px !important;
 }
 
-/* line 1974, ../sass/style.scss */
+/* line 1980, ../sass/style.scss */
 .st_googleplus_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/googleplus_icon_white.png) no-repeat !important;
   width: 37px !important;
 }
 
-/* line 1978, ../sass/style.scss */
+/* line 1984, ../sass/style.scss */
 .st_email_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/email_icon_white.png) no-repeat !important;
   width: 34px !important;
 }
 
-/* line 1982, ../sass/style.scss */
+/* line 1988, ../sass/style.scss */
 .st_sharethis_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/social_media_icon_white.png) no-repeat !important;
   width: 37px !important;
 }
 
-/* line 1986, ../sass/style.scss */
+/* line 1992, ../sass/style.scss */
 .st_pinterest_large {
   display: none !important;
 }
 
-/* line 1989, ../sass/style.scss */
+/* line 1995, ../sass/style.scss */
 #courseDescription .st_facebook_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/facebook_icon.png) no-repeat !important;
   width: 26px !important;
 }
 
-/* line 1993, ../sass/style.scss */
+/* line 1999, ../sass/style.scss */
 #courseDescription .st_twitter_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/twitter_icon.png) no-repeat !important;
   width: 39px !important;
 }
 
-/* line 1997, ../sass/style.scss */
+/* line 2003, ../sass/style.scss */
 #courseDescription .st_googleplus_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/googleplus_icon.png) no-repeat !important;
   width: 37px !important;
 }
 
-/* line 2001, ../sass/style.scss */
+/* line 2007, ../sass/style.scss */
 #courseDescription .st_email_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/email_icon.png) no-repeat !important;
   width: 34px !important;
 }
 
-/* line 2005, ../sass/style.scss */
+/* line 2011, ../sass/style.scss */
 #courseDescription .st_sharethis_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/social_media_icon.png) no-repeat !important;
   width: 37px !important;
 }
 
 /***/
-/* line 2010, ../sass/style.scss */
+/* line 2016, ../sass/style.scss */
 div.jp-audio {
   margin: auto;
 }
 
-/* line 2013, ../sass/style.scss */
+/* line 2019, ../sass/style.scss */
 .videocontent #eSocial {
   margin: auto;
 }
 
-/* line 2016, ../sass/style.scss */
+/* line 2022, ../sass/style.scss */
 #classResources, .keywords {
   background: none repeat scroll 0 0 #ECECEC;
   float: left;
@@ -2656,13 +2666,13 @@ div.jp-audio {
   width: 560px;
 }
 
-/* line 2023, ../sass/style.scss */
+/* line 2029, ../sass/style.scss */
 .keywords:before {
   content: "Keywords : ";
   font-weight: bold;
 }
 
-/* line 2027, ../sass/style.scss */
+/* line 2033, ../sass/style.scss */
 .keywords {
   color: #9c1f19;
   margin-bottom: 0;
@@ -2671,13 +2681,13 @@ div.jp-audio {
   font-size: 13px;
 }
 
-/* line 2035, ../sass/style.scss */
+/* line 2041, ../sass/style.scss */
 #classHighlights ul {
   padding-left: 15px;
   margin-top: 10px;
 }
 
-/* line 2039, ../sass/style.scss */
+/* line 2045, ../sass/style.scss */
 #classHighlights li {
   list-style: disc outside none;
   color: #433a3a;
@@ -2687,7 +2697,7 @@ div.jp-audio {
   margin-bottom: 3px;
 }
 
-/* line 2047, ../sass/style.scss */
+/* line 2053, ../sass/style.scss */
 .resourceTitle > a {
   color: #127795;
   font-weight: normal;
@@ -2698,7 +2708,7 @@ div.jp-audio {
   vertical-align: super;
 }
 
-/* line 2056, ../sass/style.scss */
+/* line 2062, ../sass/style.scss */
 .resourceFile {
   background-position: 0 0;
   margin-right: 14px;
@@ -2707,7 +2717,7 @@ div.jp-audio {
   width: 24px;
 }
 
-/* line 2063, ../sass/style.scss */
+/* line 2069, ../sass/style.scss */
 #classesDescription > p {
   color: #433a3a;
   font-size: 16px;
@@ -2718,12 +2728,12 @@ div.jp-audio {
   text-align: left;
 }
 
-/* line 2072, ../sass/style.scss */
+/* line 2078, ../sass/style.scss */
 .videocontent .sharethis {
   border-top: none;
 }
 
-/* line 2075, ../sass/style.scss */
+/* line 2081, ../sass/style.scss */
 #lessonCollectionSection .Audio {
   background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon.png") no-repeat 8px 0;
   height: 13px;
@@ -2731,7 +2741,7 @@ div.jp-audio {
 }
 
 /**grid display***/
-/* line 2082, ../sass/style.scss */
+/* line 2088, ../sass/style.scss */
 #mainContentWrapper, #courseByParentWrapper {
   clear: both;
   margin: auto;
@@ -2740,7 +2750,7 @@ div.jp-audio {
   padding: 0 10px 40px;
 }
 
-/* line 2089, ../sass/style.scss */
+/* line 2095, ../sass/style.scss */
 .topicwrapper {
   float: left;
   cursor: pointer;
@@ -2749,12 +2759,12 @@ div.jp-audio {
   height: 170px;
 }
 
-/* line 2096, ../sass/style.scss */
+/* line 2102, ../sass/style.scss */
 .topicItemTitle {
   margin: 0 10px;
 }
 
-/* line 2099, ../sass/style.scss */
+/* line 2105, ../sass/style.scss */
 .topicItemTitle a {
   color: #433a3a !important;
   font-size: 15px;
@@ -2766,14 +2776,14 @@ div.jp-audio {
   -webkit-font-smoothing: antialiased;
 }
 
-/* line 2109, ../sass/style.scss */
+/* line 2115, ../sass/style.scss */
 .topicTermnDate {
   font-size: 12px;
   margin: 0 10px;
   padding-bottom: 10px;
 }
 
-/* line 2114, ../sass/style.scss */
+/* line 2120, ../sass/style.scss */
 .topicItemText {
   color: #433a3a !important;
   display: block;
@@ -2783,13 +2793,13 @@ div.jp-audio {
   text-align: left;
 }
 
-/* line 2122, ../sass/style.scss */
+/* line 2128, ../sass/style.scss */
 .topicItemText span a {
   text-transform: capitalize;
   color: #127795;
 }
 
-/* line 2127, ../sass/style.scss */
+/* line 2133, ../sass/style.scss */
 #mainContentWrapper h1#page-title,
 #courseByParentWrapper h1#page-title {
   margin-top: 47px;
@@ -2797,7 +2807,7 @@ div.jp-audio {
   float: none;
 }
 
-/* line 2132, ../sass/style.scss */
+/* line 2138, ../sass/style.scss */
 .topicItemImage a {
   height: auto !important;
   text-decoration: none !important;
@@ -2805,7 +2815,7 @@ div.jp-audio {
   width: 300px;
 }
 
-/* line 2138, ../sass/style.scss */
+/* line 2144, ../sass/style.scss */
 .topicItemImage img {
   float: left;
   height: 170px;
@@ -2813,7 +2823,7 @@ div.jp-audio {
   z-index: -10;
 }
 
-/* line 2144, ../sass/style.scss */
+/* line 2150, ../sass/style.scss */
 .topicTextWrapper {
   background: url("../images/sliding_white_bg_3.png") repeat-x scroll 0 0 rgba(0, 0, 0, 0);
   float: left;
@@ -2822,12 +2832,12 @@ div.jp-audio {
   width: 300px;
 }
 
-/* line 2151, ../sass/style.scss */
+/* line 2157, ../sass/style.scss */
 .sticky-header {
   display: none !important;
 }
 
-/* line 2154, ../sass/style.scss */
+/* line 2160, ../sass/style.scss */
 #list img, #grid img {
   float: left;
   height: 16px;
@@ -2836,18 +2846,18 @@ div.jp-audio {
 }
 
 /**home page**/
-/* line 2163, ../sass/style.scss */
+/* line 2169, ../sass/style.scss */
 #carousal1Wrapper, #carousal2Wrapper, #carousal3Wrapper, #carousal4Wrapper {
   float: left;
   width: 100%;
 }
 
-/* line 2173, ../sass/style.scss */
+/* line 2179, ../sass/style.scss */
 #carousal4Wrapper {
   margin-bottom: 40px;
 }
 
-/* line 2180, ../sass/style.scss */
+/* line 2186, ../sass/style.scss */
 #block-ukabbalah-fp-carousals-carousal1 > h2,
 #block-ukabbalah-fp-carousals-carousal2 > h2,
 #block-ukabbalah-fp-carousals-carousal3 > h2,
@@ -2857,13 +2867,13 @@ div.jp-audio {
   color: #999;
 }
 
-/* line 2185, ../sass/style.scss */
+/* line 2191, ../sass/style.scss */
 .carrouselFix {
   margin-left: 10px;
   margin-bottom: 0;
 }
 
-/* line 2189, ../sass/style.scss */
+/* line 2195, ../sass/style.scss */
 .vidImg, .Videos, .theDescCont .Video, .Premium, .audioImg, .Audios, .theDescCont .Audio, .bothAdVdImg {
   height: 13px;
   width: 16px;
@@ -2873,71 +2883,71 @@ div.jp-audio {
   background-position: 0 -1421px;
 }
 
-/* line 2203, ../sass/style.scss */
+/* line 2209, ../sass/style.scss */
 .Premium {
   background-position: 0 -1442px;
   width: 11px;
   float: right;
 }
 
-/* line 2209, ../sass/style.scss */
+/* line 2215, ../sass/style.scss */
 .audioImg, .Audios, .theDescCont .Audio {
   background-position: 0 -1348px;
 }
 
-/* line 2219, ../sass/style.scss */
+/* line 2225, ../sass/style.scss */
 .bothAdVdImg {
   background-position: 0 -309px;
   width: 35px;
 }
 
-/* line 2224, ../sass/style.scss */
+/* line 2230, ../sass/style.scss */
 .theTitle, .titleWrapper {
   float: left;
   margin-left: 10px;
   margin-top: 10px;
 }
 
-/* line 2229, ../sass/style.scss */
+/* line 2235, ../sass/style.scss */
 .teachersPath, .readMore {
   color: #127795;
   margin-left: 5px;
 }
 
-/* line 2233, ../sass/style.scss */
+/* line 2239, ../sass/style.scss */
 .rightArrowStyleHome {
   position: relative;
 }
 
 /***/
-/* line 2238, ../sass/style.scss */
+/* line 2244, ../sass/style.scss */
 #teachingsSectionHeaderBar .lessonsCourse {
   display: block;
 }
 
-/* line 2241, ../sass/style.scss */
+/* line 2247, ../sass/style.scss */
 #authorDDWrapper, #topicDDWrapper {
   float: left;
 }
 
-/* line 2244, ../sass/style.scss */
+/* line 2250, ../sass/style.scss */
 #teachings_teachersDD, #teachings_topicDD {
   cursor: pointer;
   height: 29px;
 }
 
-/* line 2248, ../sass/style.scss */
+/* line 2254, ../sass/style.scss */
 .preVideoImg {
   width: 940px;
   margin: 20px auto auto;
 }
 
-/* line 2252, ../sass/style.scss */
+/* line 2258, ../sass/style.scss */
 .preVideoImg img {
   float: left;
 }
 
-/* line 2255, ../sass/style.scss */
+/* line 2261, ../sass/style.scss */
 .preVideoImg .videotitles {
   float: right;
   width: 290px;
@@ -2946,7 +2956,7 @@ div.jp-audio {
   margin-top: 0;
 }
 
-/* line 2267, ../sass/style.scss */
+/* line 2273, ../sass/style.scss */
 .preVideoImg #titleMultimedia,
 .preVideoImg #courseNameMultimedia,
 .preVideoImg #pipe,
@@ -2958,64 +2968,64 @@ div.jp-audio {
   color: white;
 }
 
-/* line 2270, ../sass/style.scss */
+/* line 2276, ../sass/style.scss */
 .preVideoImg #wrapperInfoMultimedia, .preVideoImg #wrapperAuthorDate {
   width: 290px;
 }
 
-/* line 2273, ../sass/style.scss */
+/* line 2279, ../sass/style.scss */
 .preVideoImg #authorNameMultimedia, .preVideoImg #dateMultimedia {
   text-align: left;
 }
 
-/* line 2276, ../sass/style.scss */
+/* line 2282, ../sass/style.scss */
 .preVideoImg .pipe {
   display: none;
 }
 
-/* line 2279, ../sass/style.scss */
+/* line 2285, ../sass/style.scss */
 .preVideoImg #wrapperPrice {
   width: 275px;
   margin-left: 30px;
 }
 
-/* line 2283, ../sass/style.scss */
+/* line 2289, ../sass/style.scss */
 .preVideoImg .sharethis {
   float: right;
   width: 290px;
   margin-top: 16px;
 }
 
-/* line 2288, ../sass/style.scss */
+/* line 2294, ../sass/style.scss */
 .transcript-content {
   width: 605px;
 }
 
-/* line 2291, ../sass/style.scss */
+/* line 2297, ../sass/style.scss */
 .audioSection .preVideoImg img {
   width: 620px;
   height: 349px;
 }
 
-/* line 2295, ../sass/style.scss */
+/* line 2301, ../sass/style.scss */
 .bookmark {
   float: right;
   width: 117px;
   color: #433a3a;
   font-size: 15px;
 }
-/* line 2300, ../sass/style.scss */
+/* line 2306, ../sass/style.scss */
 .bookmark a {
   color: #433a3a;
 }
 
-/* line 2304, ../sass/style.scss */
+/* line 2310, ../sass/style.scss */
 .flag-message {
   left: -169px !important;
 }
 
 /**start scrollling filter**/
-/* line 2309, ../sass/style.scss */
+/* line 2315, ../sass/style.scss */
 .scrollingTitle {
   background: #fff;
   position: fixed !important;
@@ -3029,7 +3039,7 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-/* line 2322, ../sass/style.scss */
+/* line 2328, ../sass/style.scss */
 .scrollingFilter, .scrollingTermDesc, .scrollingView-filters {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
   position: fixed !important;
@@ -3042,13 +3052,13 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-/* line 2333, ../sass/style.scss */
+/* line 2339, ../sass/style.scss */
 .scrollingFilter {
   padding-bottom: 10px !important;
   padding-left: 0 !important;
 }
 
-/* line 2337, ../sass/style.scss */
+/* line 2343, ../sass/style.scss */
 .teachingsBarInnerWrapper {
   max-width: 1580px;
   min-width: 940px;
